<resources>
    <string name="app_name">TICPosad</string>
    <string name="logo_name">Sergiev Posad</string>


    <!--Strings for on Boarding Screen-->

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit bag And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any placenearby or with-in the specified city. We will display specific or all relate</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a prt of our growing industry then add your place</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you dont\'t have to worry </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_started">LETS GET STARTED</string>

    <!--Strings for Dashboard-->
    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="attractions">Attractions</string>
    <string name="events">Events</string>



    <!--Titles and Descriptions-->
    <string name="featured_locations">All featured Location</string>
    <string name="featured_locatoins_description">All the locations that are featured</string>
    <string name="most_viewed_locations">Most viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


</resources>